# data-engineering-olist-analytics

./: .gitignore  .pre-commit-config.yaml  README.md  README_TEMPLATE.md  main.py  pyproject.toml
.github/workflows/: ci.yml
checks/marts/: mart_customer_rfm.yml  mart_daily_revenue.yml  mart_delivery_analysis.yml  mart_product_analytics.yml  mart_seller_performance.yml
checks/sources/: decisions.md  raw_customers.yml  raw_order_payments.yml  raw_order_reviews.yml  raw_orders.yml  raw_orders_items.yml  raw_products.yml  raw_sellers.yml
docs/: SETUP.md  data-quality.md
evidence-report/: README.md
evidence-report/pages/: index.md
evidence-report/sources/olist/: connection.yaml  mart_customer_rfm.sql  mart_daily_revenue.sql  mart_delivery_analysis.sql  mart_product_analytics.sql
notebooks/: 01_exploration.py
olist_dbt/: README.md  dbt_project.yml  package-lock.yml  packages.yml
olist_dbt/models/marts/: _marts.yml  mart_customer_rfm.sql  mart_daily_revenue.sql  mart_delivery_analysis.sql  mart_product_analytics.sql  mart_seller_performance.sql
olist_dbt/models/staging/: _sources.yml  _staging.yml  stg_customers.sql  stg_geolocation.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_reviews.sql  stg_sellers.sql
olist_dbt/seeds/: _seeds.yml
pipeline/: definitions.py
scripts/: ingest_csv_to_parquet.py
soda/: config.yml
